# pycfd

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  main.py  params.py  pyproject.toml  riemann.py  states.py  timestep.py
.github/workflows/: ci.yml  lint.yml
src/: boundaries.py  iomanager.py  main.py  params.py  physics.py  problems.py  pycfd_types.py  riemann.py  states.py  timestep.py  update.py  varindexes.py
tests/: conftest.py  test_boundaries.py  test_states.py
typings/: boundaries.pyi  iomanager.pyi  params.pyi  physics.pyi  problems.pyi  pycfd_types.pyi  riemann.pyi  states.pyi  timestep.pyi  update.pyi  varindexes.pyi
